--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "gcwa" : "https://instabio.cc/Alphabot",
-    "botName": "Haruka-Mdོ ",
-    "footer": "2023 © api.zeeoneofc.my.id",
+    "ownerNumber": ["6285701863281@s.whatsapp.net","6281297215123@s.whatsapp.net"],
+    "ownerName": "Zenix",
+    "instagram" : "https://instagram.com/zenixdcode",
+    "gcwa" : "https://chat.whatsapp.com/CUCsbw9sdKgDlU688Byegw",
+    "botName": "Hashira ",
+    "footer": "2023 © api.zenix.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
